tests/programs/a1/local/invalid/explicit_supercall.java
public class explicit_supercall {
  public A() {  super(); }
}